# SerialPlotter

./: CMakeLists.txt  channel.cpp  channel.h  channelbox.cpp  channelbox.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotter.cpp  plotter.h  read_serial.c  read_serial.h  worker_monitordev.cpp  worker_monitordev.h
